objects/slackv2__Subscription_Object__c.object
<CustomObject>
    <fields>
        <fullName>slackv2__Activated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>slackv2__Api_Name__c</fullName>
        <label>Api Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slackv2__Custom__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>slackv2__Detail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Detail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>slackv2__Displayed_Fields__c</fullName>
        <label>Displayed Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>